plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	// Temporarily commented out due to compatibility issues with Gradle 8.12
	// id 'jacoco'
}

group = 'com.distasilucas'
version = '1.0.0-SNAPSHOT'

bootJar {
	archiveFileName = "${project.name}.jar"
	launchScript()
}

ext {
	ehcacheVersion = "3.11.1"
	jacocoVersion = "0.8.12"
	jacocoExecPath = "${project.rootDir}/../target/jacoco.exec"
	javaxCacheVersion = "1.1.1"
	aspectjweaverVersion = "1.9.24"
	jsonWebTokenVersion = "0.13.0"
	liquibaseVersion = "5.0.1"
	lombokVersion = "1.18.42"
	okHttp3Version = "5.2.1"
	postgresqlVersion = "42.7.8"
	springDocVersion = "2.8.13"
	springRetryVersion = "2.0.12"
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
}

// Temporarily commented out due to compatibility issues with Gradle 8.12
// jacoco {
// 	toolVersion = jacocoVersion
// }

repositories {
	mavenCentral()
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-actuator"
	implementation "org.springframework.boot:spring-boot-starter-validation"
	implementation "org.springframework.boot:spring-boot-starter-web"
	implementation "org.springframework.boot:spring-boot-starter-cache"
	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$springDocVersion"
	implementation "org.postgresql:postgresql:$postgresqlVersion"
	runtimeOnly "com.h2database:h2"
	// Commented out for local development - uncomment if you need security
	// implementation "org.springframework.boot:spring-boot-starter-security"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$springDocVersion"
	implementation "org.springframework.retry:spring-retry:$springRetryVersion"
	implementation "org.liquibase:liquibase-core:$liquibaseVersion"
	implementation "com.squareup.okhttp3:okhttp:$okHttp3Version"
	implementation "org.ehcache:ehcache:$ehcacheVersion"
	implementation "javax.cache:cache-api:$javaxCacheVersion"
	implementation "io.jsonwebtoken:jjwt-api:$jsonWebTokenVersion"

	compileOnly "org.projectlombok:lombok:$lombokVersion"

	runtimeOnly "org.aspectj:aspectjweaver:$aspectjweaverVersion"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:$jsonWebTokenVersion"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jsonWebTokenVersion"

	annotationProcessor "org.projectlombok:lombok:$lombokVersion"

	testImplementation "com.squareup.okhttp3:mockwebserver:$okHttp3Version"
	testImplementation "org.springframework.boot:spring-boot-starter-test"
	// testImplementation "org.springframework.security:spring-security-test"
}

tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
		exceptionFormat "full"
	}
	maxParallelForks = Runtime.runtime.availableProcessors()
}

// Temporarily commented out due to compatibility issues with Gradle 8.12
// jacocoTestReport {
// 	dependsOn test
//
// 	afterEvaluate {
// 		classDirectories.setFrom(files(classDirectories.files.collect {
// 			fileTree(dir: it, exclude: [
// 					"**/Application**",
// 					"**/config/**"
// 			])
// 		}))
// 	}
//
// 	reports {
// 		csv.required = true
// 		html.required = true
// 	}
// }
//
// test {
// 	finalizedBy jacocoTestReport
// }